--- a/site/src/articles.html
+++ b/site/src/articles.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <title>RSF | Principal</title>
-    <script src="./site/js/script.js"></script>
+    <title>RSF | Artigos</title>
+    <script src="../js/script.js"></script>
     <script>showHead();</script>
 </head>
 <body>
