--- a/404.html
+++ b/404.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./site/js/script.js"></script>
+    <script>showHead();</script>
     <title>RSF | 404</title>
 </head>
 <body>
-    <h1>404 - Você se perdeu... navegue!</h1>
+    <script>showNav();</script>
+    <section class="fourzerofour">
+        <article>
+            <br><br><br><br><br>
+            <h1>404 - Você se perdeu... navegue!</h1>
+            <br><br><br><br><br>
+        </article>
+    </section>
+    <script>showFooter();</script>
 </body>
 </html>
