--- a/site/src/about.html
+++ b/site/src/about.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../js/script.js"></script>
+    <script>showHead();</script>
     <title>RSF | Sobre</title>
 </head>
 <body>
-    <p>Ronaldo Soares Filho é cientista da computação e pesquisador em Inteligência Artificial.</p>
+    <script>showNav();</script>
+
+    <section>
+        <article>
+            <br><br><br><br><br><br>
+            <p>Ronaldo Soares Filho é cientista da computação e pesquisador em Inteligência Artificial.</p>
+            <br><br><br><br><br><br>
+        </article>
+    </section>
+
+    <script>showFooter();</script>
 </body>
 </html>
