added image into about page

--- a/site/src/about.html
+++ b/site/src/about.html
@@ -10,8 +10,9 @@
 
     <section>
         <article>
-            <br><br><br><br><br><br>
-            <p>Ronaldo Soares Filho é cientista da computação e pesquisador em Inteligência Artificial.</p>
+            <br><br>
+            <img class="about-img" src="../img/rsf.png" alt="RSF">
+            <p>Ronaldo Soares Filho é cientista da computação e pesquisador em inteligência artificial.</p>
             <br><br><br><br><br><br>
         </article>
     </section>
