--- a/site/src/about.html
+++ b/site/src/about.html
@@ -13,6 +13,8 @@
             <br><br>
             <img class="about-img" src="../img/rsf.png" alt="RSF">
             <p>Ronaldo Soares Filho é cientista da computação e pesquisador em inteligência artificial.</p>
+            <p>Contato: email para</p> 
+            <p>filhoronaldosc@gmail.com</p>
             <br><br><br><br><br><br>
         </article>
     </section>
